// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin renders admin of cru org with 1 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`admin renders admin of global org 1`] = `
<Fragment>
  <Connect(Translate(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`admin renders admin of not cru org 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`cru community org renders owner 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`cru community org renders user 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`global community org renders user 1`] = `
<Fragment>
  <Connect(Translate(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`not owner renders admin 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`not owner renders user 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`owner renders owner with 0 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`owner renders owner with 1 reported comment 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`unread comments card renders comment card 1`] = `
<Fragment>
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <UnreadCommentsCard
      count={12}
      onClose={[Function]}
      onPress={[Function]}
    />
    <Flex
      style={
        Object {
          "padding": 4,
        }
      }
    />
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;

exports[`unread comments card renders no comment card when global org 1`] = `
<Fragment>
  <Connect(Translate(OnboardingCard))
    type="celebrate"
  />
</Fragment>
`;

exports[`unread comments card renders no comment card when no new comments 1`] = `
<Fragment>
  <Connect(Translate(OnboardingCard))
    type="celebrate"
  />
  <Flex
    style={
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      }
    }
  >
    <ReportCommentHeaderCard
      count={1}
      onPress={[Function]}
    />
  </Flex>
</Fragment>
`;
